<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/NumberInputOne"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/enter_value"
            android:importantForAutofill="no"
            android:inputType="number"
            tools:ignore="DuplicateSpeakableTextCheck,LabelFor,SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/NumberInputTwo"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/enter_value"
            android:importantForAutofill="no"
            android:inputType="number"
            tools:ignore="LabelFor,SpeakableTextPresentCheck, DuplicateSpeakableTextCheck" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <RadioButton
                android:id="@+id/RadioPlus"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:checked="false"
                android:text="@string/calc_plus" />

            <RadioButton
                android:id="@+id/RadioMoins"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:checked="false"
                android:text="@string/calc_moins" />

            <RadioButton
                android:id="@+id/RadioMultiplier"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:checked="false"
                android:text="@string/calc_multi" />

            <RadioButton
                android:id="@+id/RadioDiviser"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:checked="false"
                android:text="@string/calc_divise" />

        </RadioGroup>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/ResultLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/result" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/ResultCalc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/resetButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reset"
                android:onClick="onResetCalculus" />

            <Space
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_equals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/equals"
                android:onClick="onExecuteCalculus" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/exit"
            android:onClick="onExitApp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/Copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/copyright"
            tools:layout_editor_absoluteY="489dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>